--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <i class='bi bi-play-circle-fill' id="btn-play"></i>
                 </div>
                 <i class="bi bi-skip-end-fill"></i>
-                <i class="bi bi-volume-mute-fill" id="btn-sound"></i>
+                <i class="bi bi-volume-up-fill" id="btn-sound"></i>
             </div>
         </div>
     </div>
